force-app/main/default/objects/Unique_population__c/Unique_population__c.object-meta.xml
<CustomObject>
    <label>Unique population</label>
    <nameField>
        <label>Unique population Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unique populations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>