force-app/main/default/objects/Unique_population__c/fields/Approved_Employees__c.field-meta.xml
<CustomField>
    <fullName>Approved_Employees__c</fullName>
    <label>Approved Employees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>