force-app/main/default/objects/Unique_population__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מגזר ערבי</fullName>
            </value>
            <value>
                <fullName>מגזר חרדי</fullName>
            </value>
            <value>
                <fullName>יוצאים בשאלה</fullName>
            </value>
            <value>
                <fullName>יוצאי אתיופיה</fullName>
            </value>
            <value>
                <fullName>אוכלוסיית רווחה</fullName>
            </value>
            <value>
                <fullName>הורים יחידים</fullName>
            </value>
            <value>
                <fullName>צעירים בסיכון</fullName>
            </value>
            <value>
                <fullName>בעלי מוגבלויות</fullName>
            </value>
            <value>
                <fullName>נמצאים ברצף טיפולי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>