force-app/main/default/objects/Unique_population__c/fields/ProgramRequest__c.field-meta.xml
<CustomField>
    <fullName>ProgramRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramRequest</label>
    <referenceTo>ProgramRequest__c</referenceTo>
    <relationshipLabel>Unique populations</relationshipLabel>
    <relationshipName>Unique_populations</relationshipName>
    <type>Lookup</type>
</CustomField>